css: Prevent composebox to_text from getting wrapped.
Even when there is space, the to_text was getting wrapped in languages
that have more than one word for "To:", like Korean.

--- a/static/styles/compose.css
+++ b/static/styles/compose.css
@@ -100,7 +100,7 @@
         padding: 0;
         display: flex;
         align-items: center;
-        width: 100%;
+        flex: 1;
 
         .fa-angle-right {
             font-size: 0.9em;
